base/monitoring/victoria-metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics
  namespace: monitoring
  labels:
    app: victoria-metrics
spec:
  ports:
    - name: http
      port: 8428
      targetPort: 8428
  selector:
    app: victoria-metrics
